# Ollamastudio

./: .env.example  README.md  build.sh  docker-compose.yml
agent-mcp/: Cargo.toml
agent-mcp/src/: main.rs  tools.rs
backend/: .dockerignore  Dockerfile  entrypoint.sh  pyproject.toml
backend-rs/: Cargo.toml  build.sh  run.sh
backend-rs/migrations/: 001_init.sql
backend-rs/src/: config.rs  db.rs  error.rs  main.rs  state.rs
backend-rs/src/agents/: loop.rs  mod.rs  tools.rs
backend-rs/src/models/: message.rs  mod.rs  session.rs  setting.rs  skill.rs  template.rs
backend-rs/src/routes/: chat.rs  config_route.rs  debug.rs  documents.rs  files.rs  health.rs  mcp.rs  mod.rs  models.rs  sessions.rs  settings.rs  shell.rs  skills.rs  templates.rs
backend-rs/src/services/: debug.rs  document_processor.rs  mcp_proxy.rs  mod.rs  ollama.rs
backend/app/: config.py  database.py  main.py
backend/app/agents/: loop.py  tools.py
backend/app/routers/: chat.py  documents.py  files.py  mcp.py  models.py  sessions.py  settings.py  shell.py  skills.py  templates.py
backend/app/services/: debug.py  document_processor.py  ollama.py  settings.py
docs/: 01-Guide-Installation.md  02-Guide-Configuration.md  03-Installation.md  04-Exploitation.md  05-Architecture.md  06-SBOM.md
frontend/: Dockerfile  package-lock.json  package.json  server.js  svelte.config.js  vite.config.ts
frontend/src/: app.css  app.html  hooks.server.ts
frontend/src/lib/api/: index.ts
frontend/src/lib/components/: ToastContainer.svelte  TopBar.svelte
frontend/src/lib/components/ChatPanel/: ChatInput.svelte  ChatPanel.svelte  MessageBubble.svelte  ToolCallCard.svelte  WelcomeScreen.svelte
frontend/src/lib/components/CodeEditor/: CodeEditorPanel.svelte
frontend/src/lib/components/DocumentPanel/: DocumentsPanel.svelte
frontend/src/lib/components/FileExplorer/: FileExplorer.svelte  TreeNode.svelte
frontend/src/lib/components/McpPanel/: McpPanel.svelte
frontend/src/lib/components/SessionSidebar/: SessionSidebar.svelte
frontend/src/lib/components/Settings/: SettingsModal.svelte
frontend/src/lib/components/SkillSelector/: SkillSelector.svelte
frontend/src/lib/components/TemplatePanel/: TemplateDrawer.svelte
frontend/src/lib/components/Terminal/: TerminalPanel.svelte
frontend/src/lib/stores/: index.ts
frontend/src/routes/: +layout.svelte  +page.svelte
nginx/: generate-ssl.sh  ollamastudio.conf
