[package]
name = "agent-mcp"
version = "0.0.34"
edition = "2024"
description = "OllamaStudio Agent MCP — Serveur MCP system-level pour administration complète de la machine"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.8" }
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
