[package]
name = "ollamastudio-backend"
version = "0.0.31"
edition = "2024"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"

# Web framework
axum = { version = "0.8", features = ["ws", "multipart"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tower = "0.5"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "chrono", "json"] }

# HTTP client (Ollama, MCP)
reqwest = { version = "0.12", features = ["json", "stream"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PTY / process
nix = { version = "0.29", features = ["term", "signal", "process", "ioctl", "fs", "poll"] }
libc = "0.2"

# Utilities
mime_guess = "2"
regex = "1"
async-stream = "0.3"
futures = "0.3"
